# swagger/openapi.yml
@@ -938,6 +938,18 @@ paths:
           schema:
             type: integer
             default: 20
+      - name: sortBy
+          in: query
+          description: Sorting type
+          schema:
+            type: string
+            default: "recommended"
+      - name: currentUserId
+          in: query
+          description: Current user id
+          schema:
+            type: integer
+            default: -1
       responses:
         "200":
           description: Successful response
